--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint . --max-warnings=0"
   },
   "dependencies": {
     "nuxt": "^3.15.3",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/eslint-config": "^0.7.5",
+    "eslint": "^9.19.0"
   }
 }
