--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "lint": "eslint . --max-warnings=0"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.12.5",
+    "@grpc/proto-loader": "^0.7.13",
     "@nuxt/ui": "^2.21.0",
     "nuxt": "^3.15.3",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.7.5",
