--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint . --max-warnings=0"
+    "lint": "eslint . --max-warnings=0",
+    "bump-patch": "npm run lint && npx changelogen@latest --release && git push --follow-tags"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.12.5",
