--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.12.5",
     "@grpc/proto-loader": "^0.7.13",
-    "@nuxt/ui": "^2.21.0",
+    "@nuxt/ui": "^3.0.0-alpha.13",
     "console-hooks": "^1.0.2",
     "nuxt": "^3.15.3",
     "telegram-sender": "^1.0.4",
@@ -25,8 +25,9 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@nuxt/eslint": "^1.1.0",
     "@nuxt/eslint-config": "^0.7.5",
-    "changelogen": "^0.5.7",
-    "eslint": "^9.19.0"
+    "@nuxt/test-utils": "^3.17.0",
+    "changelogen": "^0.5.7"
   }
 }
