--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint . --max-warnings=0",
+    "test": "nuxt test",
     "bump-patch": "npm run lint && npx changelogen@latest --release && git push --follow-tags",
     "build-grpc-types": "proto-loader-gen-types --keepCase --longs=String --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=server/domain/lnd/types static-data/lnd/proto/lightning.proto"
   },
@@ -28,6 +29,10 @@
     "@nuxt/eslint": "^1.1.0",
     "@nuxt/eslint-config": "^0.7.5",
     "@nuxt/test-utils": "^3.17.0",
-    "changelogen": "^0.5.7"
+    "@vue/test-utils": "^2.4.6",
+    "changelogen": "^0.5.7",
+    "happy-dom": "^17.1.8",
+    "playwright-core": "^1.50.1",
+    "vitest": "^3.0.7"
   }
 }
