--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vue/test-utils": "^2.4.6",
     "changelogen": "^0.5.7",
     "happy-dom": "^17.1.8",
+    "playwright": "^1.50.1",
     "playwright-core": "^1.50.1",
     "vitest": "^3.0.7"
   }
