--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nuxt/eslint": "^1.1.0",
     "@nuxt/eslint-config": "^0.7.5",
     "@nuxt/test-utils": "^3.17.0",
+    "@playwright/test": "^1.50.1",
     "@vue/test-utils": "^2.4.6",
     "changelogen": "^0.5.7",
     "happy-dom": "^17.1.8",
