--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,6 +9,44 @@ on:
       - main
 
 jobs:
+  tests:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+
+      - name: Install dependencies
+        run: npm install --production=false
+
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: Start Docker Compose services
+        working-directory: ./docs/development
+        run: docker compose up -d
+
+      - name: Add a balanced channel to the environment
+        working-directory: ./docs/development
+        run: chmod +x add-balanced-channel.sh && ./add-balanced-channel.sh        
+
+      - name: Run Playwright tests
+        run: npx playwright test
+    
+      - uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 5
+
+      - name: Cleanup Docker Compose
+        if: always()
+        working-directory: ./docs/development
+        run: docker compose down          
+
   docker:
     if: |
       contains(github.event.head_commit.message, 'RUN_PIPELINE') || 
