fix(ci): change file permission starting with ./data recursively
Refs: projects#1549

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,7 @@ jobs:
         run: chmod +x add-balanced-channel.sh && ./add-balanced-channel.sh
 
       - name: Fix LND file permissions
-        run: sudo chmod -R 777 ./data/lnd/data/chain/bitcoin/regtest
+        run: sudo chmod -R 755 ./data
 
       - name: Debug LND file ownership
         run: ls -lah ./
