--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,6 +2,8 @@
 name: Docker build and push to docker hub on tag
 
 on:
+  release:
+    types: [published]  
   push:
     tags:
       - 'v*'
@@ -53,7 +55,7 @@ jobs:
   docker:
     if: |
       contains(github.event.head_commit.message, 'RUN_PIPELINE') || 
-      startsWith(github.ref, 'refs/tags/v')    
+      github.event_name == 'release'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
