ci: change npm script name
Refs: projects#1528

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "lint": "eslint . --max-warnings=0",
     "test": "npm run test:units && npm run test:e2e",
     "test:units": "nuxt test",
-    "test:e2e": "npx playwright test",
-    "test:e2e-dev": "npx playwright test --ui",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "npm run test:e2e -- --ui",
     "bump-patch": "npm run lint && npx changelogen@latest --release && git push --follow-tags",
     "build-grpc-types": "proto-loader-gen-types --keepCase --longs=String --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=server/domain/lnd/types static-data/lnd/proto/lightning.proto"
   },
