--- a/package.json
+++ b/package.json
@@ -14,30 +14,32 @@
     "test:units": "nuxt test",
     "test:e2e": "playwright test",
     "test:e2e:ui": "npm run test:e2e -- --ui",
+    "audit": "better-npm-audit audit",
     "bump-patch": "npm run lint && npx changelogen@latest --release && git push --follow-tags",
     "build-grpc-types": "proto-loader-gen-types --keepCase --longs=String --enums=String --defaults --oneofs --grpcLib=@grpc/grpc-js --outDir=server/domain/lnd/types static-data/lnd/proto/lightning.proto"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.12.6",
-    "@grpc/proto-loader": "^0.7.13",
-    "@nuxt/ui": "^3.0.0-alpha.2",
+    "@grpc/grpc-js": "^1.13.3",
+    "@grpc/proto-loader": "^0.7.15",
+    "@nuxt/ui": "^3.1.0",
+    "better-npm-audit": "^3.11.0",
     "console-hooks": "^1.0.2",
-    "nuxt": "^3.15.4",
+    "nuxt": "^3.17.0",
     "telegram-sender": "^1.0.6",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^3.24.2"
+    "zod": "^3.24.3"
   },
   "devDependencies": {
-    "@nuxt/eslint": "^1.1.0",
-    "@nuxt/eslint-config": "^0.7.5",
-    "@nuxt/test-utils": "^3.17.0",
-    "@playwright/test": "^1.50.1",
+    "@nuxt/eslint": "^1.3.0",
+    "@nuxt/eslint-config": "^1.3.0",
+    "@nuxt/test-utils": "^3.17.2",
+    "@playwright/test": "^1.52.0",
     "@vue/test-utils": "^2.4.6",
-    "changelogen": "^0.6.0",
-    "happy-dom": "^17.1.8",
-    "playwright": "^1.50.1",
-    "playwright-core": "^1.50.1",
-    "vitest": "^3.0.7"
+    "changelogen": "^0.6.1",
+    "happy-dom": "^17.4.4",
+    "playwright": "^1.52.0",
+    "playwright-core": "^1.52.0",
+    "vitest": "^3.1.2"
   }
 }
