--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: lts/*
 
       - name: Install dependencies
-        run: npm install --production=false
+        run: npm ci
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
