--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,9 @@ jobs:
         with:
           node-version: lts/*
 
+      - name: Install system dependencies
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
       - name: Install dependencies
         run: npm ci
 
