--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,6 +23,9 @@ jobs:
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
+      - name: Install missing native binding manually
+        run: npm install @oxc-parser/binding-linux-x64-gnu
+
       - name: Install dependencies
         run: npm ci
 
