--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,14 +23,16 @@ jobs:
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
+      - name: Install dependencies without postinstall
+        run: npm ci
+        env:
+          DISABLE_POSTINSTALL: true
+
       - name: Install missing native binding manually
         run: npm install @oxc-parser/binding-linux-x64-gnu
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Rebuild native modules
-        run: npm rebuild
+      - name: Manually run postinstall
+        run: npm run postinstall
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
