--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,21 +18,15 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 20.10.0
+          node-version: lts/*
 
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
       - name: Install dependencies without postinstall
-        run: npm ci
+        run: npm install --no-audit --no-fund --production=false
         env:
           DISABLE_POSTINSTALL: true
-
-      - name: Install missing native binding manually
-        run: npm install @oxc-parser/binding-linux-x64-gnu
-
-      - name: Manually run postinstall
-        run: npm run postinstall
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
