debug: npm postinstall
Refs: projects#1705

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,9 @@ jobs:
         env:
           DISABLE_POSTINSTALL: true
 
+      - name: Postinstall
+        run: npm run postinstall
+
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
