--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,9 +24,14 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
       - name: Install dependencies without postinstall
-        run: npm install --no-audit --no-fund --production=false
+        run: npm ci
         env:
           DISABLE_POSTINSTALL: true
+
+      - name: Install platform-specific dependencies
+        run: |
+          npm install --no-save @oxc-parser/binding-linux-x64-gnu
+          npm install --no-save @rollup/rollup-linux-x64-gnu
 
       - name: Postinstall
         run: npm run postinstall
