--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           npm install @oxc-parser/binding-linux-x64-gnu
           npm install @rollup/rollup-linux-x64-gnu
+          npm install @lightningcss/binding-linux-x64-gnu
 
       - name: Postinstall
         run: npm run postinstall
