--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,16 +24,12 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
       - name: Install dependencies without postinstall
-        run: npm ci
+        run: npm install --force
         env:
           DISABLE_POSTINSTALL: true
 
       - name: Install platform-specific dependencies
-        run: |
-          npm install @oxc-parser/binding-linux-x64-gnu
-          npm install @rollup/rollup-linux-x64-gnu
-          npm install --force lightningcss
-          npm rebuild
+        run: npm rebuild
 
       - name: Postinstall
         run: npm run postinstall
