--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,13 +23,12 @@ jobs:
       - name: Install system dependencies
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
-      - name: Install dependencies without postinstall
-        run: npm install --force
+      - name: Remove node_modules and install dependencies without postinstall
+        run: |
+          rm -rf node_modules
+          npm install
         env:
           DISABLE_POSTINSTALL: true
-
-      - name: Install platform-specific dependencies
-        run: npm rebuild
 
       - name: Postinstall
         run: npm run postinstall
