--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,24 +14,15 @@ jobs:
   tests:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
 
-      - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y build-essential
-
-      - name: Remove node_modules and install dependencies without postinstall
-        run: |
-          rm -rf node_modules
-          npm install
-        env:
-          DISABLE_POSTINSTALL: true
-
-      - name: Postinstall
-        run: npm run postinstall
+      - name: Install dependencies
+        run: npm ci
 
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
