--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "playwright": "^1.52.0",
     "playwright-core": "^1.52.0",
     "vitest": "^3.1.2"
-  }
+  },
+  "overrides": {
+    "oxc-parser": "0.67.0"
+  }  
 }
